Revised HTML code to use semantic structure

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Challenge-02 for Monash BootCamp!</title>
 </head>
 
-<header>
-    <nav class="header">
+<viewablepage>
+
+
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,10 +24,15 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </nav>
-    </header>
-    <image class="hero"></image>
+
+        </header>
+
+
+
     <main class="content">
+
+        <image class="hero"></image>
+   
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -48,6 +55,9 @@
             </p>
         </section>
     </main>
+
+
+
     <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,12 +81,20 @@
             </p>
         </div>
     </aside>
+
+
+
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
+
+
+
+</viewablepage>
+
 
 
 </html>
