--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        
+
+        <div>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -25,8 +26,9 @@
                 </li>
             </ul>
 
-        </header>
+        </div>
 
+    </header>
 
 
     <main class="content">
