--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <image class="hero"></image>
    
-        <section class="search-engine-optimization">
+        <section class="HeaderItems">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -56,7 +56,7 @@
         </section>
 
 
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="HeaderItems">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -65,7 +65,7 @@
         </section>
 
 
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="HeaderItems">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -76,13 +76,11 @@
 
     </main>
 
+    
 
+    <aside class="AsideClass">
 
-
-
-    <aside class="benefits">
-
-        <section class="benefit-lead">
+        <section class="AsideItems">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
@@ -91,7 +89,7 @@
         </section>
 
 
-        <section class="benefit-brand">
+        <section class="AsideItems">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
@@ -100,7 +98,7 @@
         </section>
 
 
-        <section class="benefit-cost">
+        <section class="AsideItems">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
@@ -113,7 +111,6 @@
 
 
 
-    
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
